--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-tilt": "^0.1.4",
     "tachyons": "^4.11.1"
   },
+  "engines": {
+    "node": "^12.16.1",
+    "npm": "^6.13.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
